--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-  <meta charset=utf-8>
-  <title>Fyne View</title>
-  <link rel=stylesheet href=all.css>
+ <meta charset=utf-8>
+ <title>Fyne View</title>
+ <link rel=stylesheet href=all.css>
+ <script>
+ function showHide(id){
+  var dom=document.getElementById(id);
+  if('auto'==dom.style.height){
+   dom.style.height = 0;
+  }else{
+   dom.style.height = 'auto';
+  }
+ };
+ </script>
 </head>
 <body>
 
 <h1>Fyne View</h1>
 
 <section>
- <h2><a href=#>How to get there</a></h2>
- 
+ <h2><a href="javascript:showHide('map');">How to get there</a></h2>
+ <div class=content id=map>
+  <p>this is the map</p>
+ </div> 
 </section>
 
 <section>
- <h2><a href=#>Calendar</a></h2>
-
-</section>
+ <h2><a href="javascript:showHide('calendar')">Calendar</a></h2>
+ <div class=content id=calendar>
+  <p>this is the calendar</p>
+ </div></section>
 
 <section>
- <h2><a href=#>Instructions</a></h2>
-
+ <h2><a href="javascript:showHide('instructions')">Instructions</a></h2>
+ <div class=content id=instructions>
+  <p>these are the instructions</p>
+ </div>
 </section>
 
 </body>
