Added house instructions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,41 @@
 <section>
  <h2><a href="javascript:showHide('instructions')">Instructions</a></h2>
  <div id=instructions>
-  <p>these are the instructions</p>
+  <h3>When you arrive</h3>
+  <ul>
+   <li>Keys for the back door, garage etc are hanging in the cupboard next to the back door;</li>
+   <li>Turn water on - the key is in the garage, hanging up on the left by the side door. The water stopcock is just outside the back door. Push the metal cover to the side and turn water on with ¼-turn in either direction
+Turn off all the taps upstairs and downstairs once the water is turned on;</li>
+   <li>The upstairs loo may need flushing once or twice to start with if the cistern keeps running;</li>
+   <li>The open fire is set and there's a lighter on the mantelpiece. Please take the polythene 'plug' out of the chimney carefully first! There is a plastic bag in the garage for the ash. There is a small shovel, broom head and old towel in the garage for cleaning the fire out with. There's also usually plenty of paper, wood and an axe in the garage for fire lighting.</li>
+  </ul>
+ 
+  <h3>Top Tips</h3>
+  <ul>
+   <li>The shower and hot water switches are in the cupboard by the back door;</li>
+   <li>There's a fan heater in the bathroom: 1 pull = 1kW, 2 pulls = 2kW, 3 pulls = off;</li>
+   <li>The electric panel heaters are all set to frost protection. Adjust to suit. The heaters in the bedrooms have 2 dials. The one on the left should remain set to the 'full sun' setting at all times;</li>
+   <li>The free standing heater in the living room has a timer that can be set;</li>
+   <li>Spare bedding and towels are in drawers under the bed in the front bedroom. Use as necessary, but please wash anything left in the washing basket from the last visit and put away anything left out to dry. Leave dirty bedding etc in the basket in the front bedroom.</li>
+  </ul>
+ 
+  <h3>When you leave, you must</h3>
+  <ol>
+   <li>Turn off the water (¼-turn in either direction);</li>
+   <li>Open the taps</li>
+   <li>Leave the panel heaters on, set to frost protection.</li>
+  </ol>
+  <p>(these are required as conditions of the insurance)</p>
+
+  <h3>Also...</h3>
+  <ul>
+   <li>Please clean up - the vacuum cleaner is in the cupboard under the oven and other cleaning stuff under the sink;</li>
+   <li>Leave the fire as you found it for the next people visiting;</li>
+   <li>Turn the hot water off as soon as everyone has showered on the last day so you don't leave too much hot water in the tank;</li>
+   <li>Turn off the free standing heater in the living room (don't get caught out by the timer!);</li>
+   <li>Turn off the power to the showers, but leave the mains power on;</li>
+   <li>Take your rubbish away with you.</li>
+  </ul>
  </div>
 </section>
 
