Added location hash jump on section open

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   }else{
    dom.style.height = 'auto';
    dom.parentNode.className = 'open';
+   window.location.hash = id;
   }
  };
  </script>
