--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <section>
  <h2><a href="javascript:showHide('map');">How to get there</a></h2>
  <div id=map>
-  <p>this is the map</p>
+  <p>Fyne View, Strachur (<a href=#>view map</a>)</p>
+  <iframe width="96%" height="400" frameborder="0" 
+          scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Strachur&amp;aq=0&amp;oq=strachur&amp;sll=52.8382,-2.327815&amp;sspn=5.921091,14.128418&amp;ie=UTF8&amp;hq=&amp;hnear=Strachur,+Argyll+and+Bute,+United+Kingdom&amp;ll=56.169345,-5.06458&amp;spn=0.085256,0.220757&amp;t=m&amp;z=12&amp;output=embed"></iframe>
  </div> 
 </section>
 
