--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
  <meta charset=utf-8>
  <title>Fyne View</title>
+ <meta name=viewport content="width=device-width,initial-scale=1.0">
+
  <link rel=stylesheet href=all.css>
  <script>
  function showHide(id){
