Added food and drink section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>Fyne View</h1>
 
 <section>
- <h2><a href="javascript:showHide('map');">How to get there</a></h2>
+ <h2><a href="javascript:showHide('map');">Where is it?</a></h2>
  <div id=map>
   <p>Fyne View, Strachur (<a href=#>view map</a>)</p>
   <iframe width="96%" height="400" frameborder="0" 
@@ -37,7 +37,8 @@
  <h2><a href="javascript:showHide('calendar')">Calendar</a></h2>
  <div id=calendar>
   <iframe src="http://www.google.com/calendar/embed?src=openknot.com_rsvurm723m1vregocrg4u6kgug%40group.calendar.google.com&ctz=Europe/London" style="border: 0" width="96%" height="600" frameborder="0" scrolling="no"></iframe>
- </div></section>
+ </div>
+</section>
 
 <section>
  <h2><a href="javascript:showHide('instructions')">Instructions</a></h2>
@@ -61,11 +62,11 @@ Turn off all the taps upstairs and downstairs once the water is turned on;</li>
   </ul>
  
   <h3>When you leave, you must</h3>
-  <ol>
+  <ul>
    <li>Turn off the water (¼-turn in either direction);</li>
    <li>Open the taps</li>
    <li>Leave the panel heaters on, set to frost protection.</li>
-  </ol>
+  </ul>
   <p>(these are required as conditions of the insurance)</p>
 
   <h3>Also...</h3>
@@ -77,6 +78,17 @@ Turn off all the taps upstairs and downstairs once the water is turned on;</li>
    <li>Turn off the power to the showers, but leave the mains power on;</li>
    <li>Take your rubbish away with you.</li>
   </ul>
+ </div>
+</section>
+
+<section>
+ <h2><a href="javascript:showHide('food')">Food and Drink Nearby</a></h2>
+ <div id=food>
+  <p>The <a href=http://www.creggans-inn.co.uk>Creggans Inn</a> on the road into Strachur serves a decent pint, and good bar/restaurant meals. Critically, it is within easy walking distance of the house making it a firm favourite.</p>
+  <p><a href="http://www.lochfyne.com/About-Us/Loch-Fyne-Businesses/Loch-Fyne-Oysters/Cairndow-Oyster-Bar---Restaurant">The Cairndow Oyster Bar</a> on the A83 towards Inveraray is the original Loch Fyne fish restaurant. It makes a good lunch spot; but closes early so not great for dinner.</p>
+  <p>In Inveraray itself, <a href=http://www.thegeorgehotel.co.uk>the George Hotel</a> is a lively location for quality pub grub. There's often live music, and it can get very busy in the summer.</p>
+  <p>The <a href=http://www.whistlefieldinn.co.uk>Whistlefield Inn</a> just off the A815 towards Dunoon is a cosy tavern for monster portions of pub grub.</p>
+  <p>The <a href=http://www.theoystercatcher.co.uk>Oyster Catcher at Otter Ferry</a> is a little further off the beaten track in a beautiful location on the loch-shore, and serves good food.</p> 
  </div>
 </section>
 
