--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 <section>
  <h2><a href="javascript:showHide('map');">Where is it?</a></h2>
  <div id=map>
+  <p>Fyne View, Shore Road, Strachur, PA27 8BX</p>
   <div id=bmap></div>
-  <p>Fyne View, Strachur, PA27 8BX</p>
+  <p>As you drive into Strachur from the A83, the turning onto Shore Road is on your right at a sharp left-hand bend (A886 signposted to Portavadie). The house is just after the end of the short single-track section, if you reach the war memorial you've gone too far.</p>
  </div> 
 </section>
 
@@ -56,8 +57,8 @@
 </section>
 
 <section>
- <h2><a href="javascript:showHide('instructions')">Instructions</a></h2>
- <div id=instructions>
+ <h2><a href="javascript:showHide('house')">In the House</a></h2>
+ <div id=house>
   <h3>When you arrive</h3>
   <ul>
    <li>Keys for the back door, garage etc are hanging in the cupboard next to the back door;</li>
@@ -97,13 +98,27 @@ Turn off all the taps upstairs and downstairs once the water is turned on;</li>
 </section>
 
 <section>
- <h2><a href="javascript:showHide('food')">Food and Drink Nearby</a></h2>
+ <h2><a href="javascript:showHide('food')">Food and Drink</a></h2>
  <div id=food>
   <p>The <a href=http://www.creggans-inn.co.uk>Creggans Inn</a> on the road into Strachur serves a decent pint, and good bar/restaurant meals. Critically, it is within easy walking distance of the house making it a firm favourite.</p>
   <p><a href="http://www.lochfyne.com/About-Us/Loch-Fyne-Businesses/Loch-Fyne-Oysters/Cairndow-Oyster-Bar---Restaurant">The Cairndow Oyster Bar</a> on the A83 towards Inveraray is the original Loch Fyne fish restaurant. It makes a good lunch spot; but closes early so not great for dinner.</p>
   <p>In Inveraray itself, <a href=http://www.thegeorgehotel.co.uk>the George Hotel</a> is a lively location for quality pub grub. There's often live music, and it can get very busy in the summer.</p>
   <p>The <a href=http://www.whistlefieldinn.co.uk>Whistlefield Inn</a> just off the A815 towards Dunoon is a cosy tavern for monster portions of pub grub.</p>
   <p>The <a href=http://www.theoystercatcher.co.uk>Oyster Catcher at Otter Ferry</a> is a little further off the beaten track in a beautiful location on the loch-shore, and serves good food.</p> 
+ </div>
+</section>
+
+<section>
+ <h2><a href="javascript:showHide('rain')">Rainy Day</a></h2>
+ <div id=rain>
+  <p>TBC</p>
+ </div>
+</section>
+
+<section>
+ <h2><a href="javascript:showHide('sun')">Sunny Day</a></h2>
+ <div id=sun>
+  <p>TBC</p>
  </div>
 </section>
 
