Changed calendar to html/ical links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 <section>
  <h2><a href="javascript:showHide('calendar')">Calendar</a></h2>
  <div id=calendar>
-  <iframe src="http://www.google.com/calendar/embed?src=openknot.com_rsvurm723m1vregocrg4u6kgug%40group.calendar.google.com&ctz=Europe/London" style="border: 0" width="96%" height="600" frameborder="0" scrolling="no"></iframe>
+  <p>There is Google calendar to track when the house is busy:</p>
+  <ul>
+    <li><a href="http://www.google.com/calendar/embed?src=openknot.com_rsvurm723m1vregocrg4u6kgug%40group.calendar.google.com&ctz=Europe/London">view calendar in your browser</a></li>
+    <li><a href="http://www.google.com/calendar/ical/openknot.com_rsvurm723m1vregocrg4u6kgug%40group.calendar.google.com/public/basic.ics">as an iCal feed (to include alongside your other calendars)</a></li>
+  </ul>
+  <p>If you need access to add/edit entries, please drop Rob a line.</p>
  </div>
 </section>
 
