Added noindex meta-tag to be safe

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta charset=utf-8>
  <title>Fyne View</title>
  <meta name=viewport content="width=device-width,initial-scale=1.0">
+ <meta name=robots content=noindex>
 
  <link rel=stylesheet href=all.css>
  <script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&mkt=en-gb"></script>
