Finished initial launch content

--- a/index.html
+++ b/index.html
@@ -115,16 +115,31 @@ Turn off all the taps upstairs and downstairs once the water is turned on;</li>
 </section>
 
 <section>
- <h2><a href="javascript:showHide('rain')">Rainy Day</a></h2>
- <div id=rain>
-  <p>TBC</p>
+ <h2><a href="javascript:showHide('sun')">Sunny Day</a></h2>
+ <div id=sun>
+  <h3>Walking</h3>
+  <p>The &quot;Arrochar Alps&quot; are nearby, with stunning views on a clear day: most walks start from Arrochar or Inveruglas. The Tyndrum Hills and Crianlarich Hills are also close.</p>
+  <p>For a short local walk, clearly way-marked routes start from Glenbranter, a quick drive towards Dunoon.</p>
+  <p>Further along Loch Eck are the (large!) Botanic Gardens and Puck's Glen, both excellent sunday afternoon walks.</p>
+  <p>There are a number of books and maps in the house to help out with other ideas.</p>
+  <h3>Cycling</h3>
+  <p>Glenbranter has a short downhill single track mountain bike trail which you can cycle to straight from the house.</p>
+  <p>The Ardgarten mountain bike trails are a short drive towards Arrochar.</p>
+  <p>Lots of quiet roads mean plenty of options on a road bike too.</p> 
+  <h3>Exploring</h3>
+  <p>The Isle of Bute is merely a ferry-ride away from <a href="http://www.calmac.co.uk/timetables/winter-timetables.htm?id=winter-bute--colintraive-rhubodach.png">Colintraive</a>.</p>
+  <p>The Cowal Peninsula has a number of interesting villages and impressive views so is well worth an explore.</p>
+  <p>There are a few different wildlife-viewing/island-viewing (or both!) boat trips from Oban</a>.</p>
  </div>
 </section>
 
 <section>
- <h2><a href="javascript:showHide('sun')">Sunny Day</a></h2>
- <div id=sun>
-  <p>TBC</p>
+ <h2><a href="javascript:showHide('rain')">Rainy Day</a></h2>
+ <div id=rain>
+  <p>See &quot;Sunny&quot;, but the views won't be quite so good.</p>
+  <p>There's a <a href="http://www.oban.org.uk/listing/Oban-Distillery">distillery in Oban</a>.</p>
+  <p>The <a href="http://www.crerarhotels.com/ourhotels/loch_fyne_hotel/spa.html">Loch Fyne Hotel in Inveraray has a spa</a>.</p>
+  <p>... if you find other good options email them to <a href="mailto:share@fyneview.co.uk">share@fyneview.co.uk</a>.</p>
  </div>
 </section>
 
